--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.0.12",
     "lodash": "^4.17.21",
     "next": "14.0.1",
     "react": "^18",
