--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,13 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.27",
     "express": "^4.18.3",
+    "mysql": "^2.18.1",
+    "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
+  },
+  "devDependencies": {
+    "@types/mysql": "^2.15.26",
+    "dotenv": "^16.4.5"
   }
 }
