--- a/backend/package.json
+++ b/backend/package.json
@@ -14,13 +14,16 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.27",
     "express": "^4.18.3",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.9.2",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.2",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@types/mysql": "^2.15.26",
+    "@types/validator": "^13.11.9",
+    "colors": "^1.4.0",
     "dotenv": "^16.4.5"
   }
 }
