--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.27",
+    "bcrypt": "^5.1.1",
     "express": "^4.18.3",
     "mysql2": "^3.9.2",
     "nodemon": "^3.1.0",
@@ -21,6 +22,7 @@
     "validator": "^13.11.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/mysql": "^2.15.26",
     "@types/validator": "^13.11.9",
     "colors": "^1.4.0",
