--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^20.11.27",
     "bcrypt": "^5.1.1",
     "express": "^4.18.3",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.2",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/mysql": "^2.15.26",
     "@types/validator": "^13.11.9",
     "colors": "^1.4.0",
