--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-loading": "^2.0.3",
     "react-modal": "^3.16.1",
     "uuid": "^9.0.1"
   },
