--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.1.1",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.6.1",
     "mysql2": "^3.9.2",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
