--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18",
     "react-loading": "^2.0.3",
     "react-modal": "^3.16.1",
+    "tailwind-merge": "^2.4.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
